cmake_minimum_required(VERSION 3.0)
project(threadpool)

set(CMAKE_CXX_FLAGE_DEBUG ${CMAKE_CXX_FLAGE_DEBUG} -g)
set(CMAKE_CXX_STANDARD 17)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
link_directories(lib/)
include_directories(include/)
add_subdirectory(src)
add_subdirectory(test)